# innsbruck

./: LICENSE  README.md  innsbruck.cabal
Innsbruck/: Groebner.hs  Polynomial.hs
src/: polynomial.hs
test/: GroebnerTest.hs  PolynomialTest.hs  TestMain.hs
